# rustsharp

./: README.md  build.sh  run.sh
C-sharp/: RustSharp.Core.csproj  mathrust.cs  native.cs  no_name.cs  str_rust.cs
cs-System/: program.cs  rustsharp.server.csproj
rust/: Cargo.toml  cargo.toml  lib.rs
rust/src/: abi.rs  errors.rs  lib.rs  module.rs  runtime.rs  test.c
