[package]
name = "rustsharp-core"
version = "0.3.0"
edition = "2021"
description = "RustSharp native runtime engine — ABI-stable core for .rshm modules"
license = "MIT"
repository = "https://github.com/g3stavo73/rustsharp"
readme = "README.md"

[lib]
name = "rustsharp"
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = []
wasm = []

[dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
